Fixed alignment issue between hero image and header on iteminfopg.

--- a/Resources/CSS-Folder/item-info-pg.css
+++ b/Resources/CSS-Folder/item-info-pg.css
@@ -73,6 +73,15 @@ header {
     bottom: -100px;
 }
 
+.search-catalyst {
+    position: absolute;
+    right: 30px;
+    height: 20px;
+    width: 20px;
+    z-index: 500;
+    cursor: pointer;
+}
+
 .search-bar {
     position: relative;
     height: 40px;
@@ -426,7 +435,7 @@ header {
 
     header {
         height: 60px;
-        padding: 0 3vw;
+        padding: 0 0 0 3vw;
     }
 
     .mobile-header {
@@ -451,6 +460,18 @@ header {
     .mobile-header-drop {
         top: 0;
         left: -338px;
+    }
+}
+
+@media only screen and (max-width: 596px) {
+    .hamburger {
+        margin-left: 1.5vw;
+    }
+}
+
+@media only screen and (max-width: 490px) {
+    .hamburger {
+        margin-left: 2vw;
     }
 }
 
@@ -592,6 +613,10 @@ aside {
         margin: 0;
     }
 
+    .item-image-display img {
+        padding: 30px 0;
+    }
+
     .item-information-container {
         position: static;
         width: 100%;
@@ -615,6 +640,12 @@ aside {
 
     .button {
         width: 92%;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .body-outer-container {
+        padding-top: 10px;
     }
 }
 
